new cmake layout. conan2

--- a/login_matchmaking_game_shared_type/CMakeLists.txt
+++ b/login_matchmaking_game_shared_type/CMakeLists.txt
@@ -1,4 +1,39 @@
- target_sources(${TARGET_NAME} PRIVATE
-         matchmakingGameSerialization.hxx
-         userMatchmakingSerialization.hxx
- )
+##
+## Copyright (c) 2024 Waldemar Schneider (w-schneider1987 at web dot de)
+##
+## Distributed under the Boost Software License, Version 1.0.
+## (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
+
+
+add_library(login_matchmaking_game_shared_type INTERFACE)
+
+
+add_library(myproject::login_matchmaking_game_shared_type ALIAS login_matchmaking_game_shared_type)
+
+
+find_package(durak)
+find_package(Boost)
+
+
+target_link_libraries(login_matchmaking_game_shared_type INTERFACE
+        durak::durak
+        Boost::headers
+        )
+
+target_include_directories(login_matchmaking_game_shared_type INTERFACE $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+        $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>)
+
+target_compile_features(login_matchmaking_game_shared_type INTERFACE cxx_std_20)
+
+set_target_properties(
+        login_matchmaking_game_shared_type
+        PROPERTIES VERSION ${PROJECT_VERSION}
+        CXX_VISIBILITY_PRESET hidden
+        VISIBILITY_INLINES_HIDDEN YES)
+
+install(FILES
+        matchmakingGameSerialization.hxx
+        userMatchmakingSerialization.hxx
+        DESTINATION include/login_matchmaking_game_shared_type
+        )
+install(TARGETS login_matchmaking_game_shared_type DESTINATION lib)
