--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,16 @@ OPTION(BUILD_TESTS "enable tests" OFF)
 IF (BUILD_TESTS)
     add_subdirectory(test)
 ENDIF (BUILD_TESTS)
+
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+add_custom_target(copy_compile_commands_json ALL
+                  DEPENDS ${CMAKE_SOURCE_DIR}/compile_commands.json)
+
+add_custom_command(
+  OUTPUT ${CMAKE_SOURCE_DIR}/compile_commands.json
+  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/compile_commands.json
+          ${CMAKE_SOURCE_DIR}/compile_commands.json
+  COMMENT
+    "copy compile_commands.json build to compile_commands.json project root so tools can find it more easily"
+)
